fix: adjust footer font size to improve readability

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ a{
     display:flex;
     justify-content: space-around;
     align-items: center;
-    font-size: 15px;
+    font-size: 12px;
     color:whitesmoke;
     margin: 0 10px;
     border-radius:8px;
